--- a/TP_NMR1.ipynb
+++ b/TP_NMR1.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A faire\n",
-    "Importer les données du bruit\n",
-    "Puis voire notes prise dans le cahier et énoncé"
+    "<h1>Generation of synthetic data</h1>"
    ]
   },
   {
@@ -141,6 +139,179 @@
     "plt.xlabel('t')\n",
     "plt.ylabel('Noisy data')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Comparison of regularization strategies</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 1\n",
+    "Voir notes prises en cours. Il faut surement montrer que les fonctions sont strictement convexes donc possède un minimum global.\n",
+    "Smoothness prior:\n",
+    "Montrer que la matrice D est convexe puis la norme au carré est convexe donc on a g une compositition de fonctions convexe donc g est convexe.\n",
+    "Ou on calcule jsute la dérivée seconde de la fonction\n",
+    "Juste la définition parait plus facile\n",
+    "Smoothness prior + constraints :\n",
+    "Montrer que la fonction constraint est convexe donc la sommme de deux fonctions convexes est convexe\n",
+    "Sparsity prior :Montrer que la norme 1 est convexe.\n",
+    "    Utiliser \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Smoothness prior:\n",
+    "$g(x) = \\frac{1}{2}\\left \\| D(x) \\right \\|^{2} = \\frac{1}{2}\\sum_{N}^{i=1}(x_{i}-x_{i-1})^{2}$\n",
+    "We take i and j in $\\left \\lfloor 1..N \\right \\rfloor$\n",
+    "$\\frac{\\partial g}{\\partial x_{i}} = 2x_{i} - x_{i-1} - x_{i+1}$\n",
+    "$\\frac{\\partial^{2} g}{\\partial^{2} x_{i}} = 2$ and $\\frac{\\partial^{2} g}{\\partial x_{i}x_{j}} = -1$ if j is equal to i+1 or i-1, $\\frac{\\partial^{2} g}{\\partial x_{i}x_{j}} = 0$ otherwise.\n",
+    "So the $\\frac{\\partial^{2} g}{\\partial^{2} x_{i}} = 2$ > 0 and the function g is convex. So the problem has a solution which is unique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Smoothness prior + constraints : $g(x) = \\frac{1}{2}\\left \\| D(x) \\right \\|^{2}+ \\iota _{\\left [ x_{min},x_{max} \\right ]^{N}}(x)$, Thanks to the indicator function we will now have to minmise the smoothness prior function in ${\\left [ x_{min},x_{max} \\right ]^{N}}$ which is compact so the g function has a minimum which is unique and the problem 4 has a unique minimum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sparsity prior : $g(x) = \\left \\|  x\\right \\|_{1}$, g is a norm so by defition g is convex so g and the problem have a minimum but it is not necessary unique."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Maximum entropy regularization</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We take x in $R^{N}$ Voir notes dans le cahier ou photo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question8"
    ]
   }
  ],
